--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -1,5 +1,10 @@
 /*-- scss:defaults --*/
 
+.navbar {
+  font-size: 1.5em;
+}
+
+
 // Base document colors
 $body-bg: #181818;
 $body-color: white;
@@ -9,7 +14,7 @@ $light: #525252c8;
 
 // Navigation element colors
 $footer-bg: #181818;
-$navbar-bg: #303030;
+$navbar-bg: #5b2942ff;
 $sidebar-bg: #303030;
 
 // Code blocks
@@ -23,6 +28,8 @@ $input-bg: #242424;
 
 $code-color: #eee;
 $code-bg: #444;
+
+$link-color: #c27ba0;
 
 $font-size-base: 1rem;
 $navbar-brand-font-size: 2rem;
