Adds link active color to dark theme scss

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -30,6 +30,8 @@ $code-color: #eee;
 $code-bg: #444;
 
 $link-color: #c27ba0;
+$nav-tabs-link-active-color: #fff;
 
 $font-size-base: 1rem;
 $navbar-brand-font-size: 2rem;
+
